--- a/docs/installation.mdx
+++ b/docs/installation.mdx
@@ -9,24 +9,10 @@ FreezeRay consists of two components: the CLI tool and the Swift package. The CL
 
 ## Install CLI Tool
 
-<Info>
-  Homebrew and Mint support coming soon! Currently building from source.
-</Info>
-
-### Build from Source
-
-Clone and build the CLI:
+Install via npm:
 
 ```bash
-git clone https://github.com/TrinsicVentures/FreezeRay.git
-cd FreezeRay
-swift build -c release
-```
-
-Copy the binary to your path:
-
-```bash
-cp .build/release/freezeray /usr/local/bin/
+npm install -g @trinsicventures/freezeray
 ```
 
 Verify installation:
@@ -35,16 +21,25 @@ Verify installation:
 freezeray --version
 ```
 
+<Warning>
+  **Apple Silicon only:** The npm package contains a precompiled binary for Apple Silicon (ARM64) Macs. Intel Mac users must build from source.
+</Warning>
+
+### Alternative: Build from Source
+
+For Intel Macs or if you prefer to build from source:
+
+```bash
+git clone https://github.com/TrinsicVentures/FreezeRay.git
+cd FreezeRay
+swift build -c release
+cp .build/release/freezeray /usr/local/bin/
+```
+
 ### Homebrew (Coming Soon)
 
 ```bash
 brew install trinsic/tap/freezeray
-```
-
-### Mint (Coming Soon)
-
-```bash
-mint install TrinsicVentures/FreezeRay
 ```
 
 ## Initialize Your Project
